setup custom translator

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
   <head>
     <script type="text/javascript" src="fabric.min.js"></script>
     <script type="text/javascript" src="initializeObjects.js"></script>
+    
     <script type="module">
       // Add import(s) for your module(s) to here and modify event listeners
-
+      import {addObjectSet1 } from 'customtranslate.js';
       document.querySelector('#spaceHorizontally').addEventListener('click',
         () => {
-          alert("EDIT ME")
+          // alert("EDIT ME")
         }
       )
 
