import correct metod

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <script type="module">
       // Add import(s) for your module(s) to here and modify event listeners
-      import {addObjectSet1 } from 'customtranslate.js';
+      import {spaceHorizontally } from 'customtranslate.js';
       document.querySelector('#spaceHorizontally').addEventListener('click',
         () => {
           // alert("EDIT ME")
