--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
   <head>
     <script type="text/javascript" src="fabric.min.js"></script>
     <script type="text/javascript" src="initializeObjects.js"></script>
-    
+    <script type="text/javascript" src="modifyObjects.js"></script>
     <script type="module">
       // Add import(s) for your module(s) to here and modify event listeners
       var canvas = new fabric.Canvas('c');
-      // let rect = addObjectSet1().rect;
+      // let rect = addObjectSet1();
       // console.log("rect", rect)
       // console.log("canvas", canvas)
       document.querySelector('#spaceHorizontally').addEventListener('click',
         () => {
+          clearCanvas('objects_3');
           // console.log("2", rect)
-          let rect = addObjectSet1();
-          rect.setLeft(rect.getLeft() + 10);
-	        canvas.renderAll();
+          // let rect = addObjectSet1('rect');
+          // rect.setLeft(rect.getLeft() + 10);
+	        // canvas.renderAll();
         }
       )
 
